--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto con sockets</title>
     <script src="https://socketspro.onrender.com/socket.io/socket.io.min.js" defer></script>
-    <script src="https://socketspro.onrender.com/js/script.js" defer></script>
+    <script src="./js/script.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
 </head>
@@ -36,15 +36,16 @@
                 <form action="" id="enviarDatos">
                     <div class="card">
                         <div class="card-header">
-                            <h1>Nuevo usuario</h1>
+                            <h1 id="txtNuevoUsuario">Nuevo usuario</h1>
                         </div>
                         <div class="card-body">
+                            <input class="form-control mb-3" name="id" id="id"placeholder="ID" autofocus readonly disabled>
                             <input class="form-control mb-3" type="text" name="nombre" id="nombre" placeholder="Nombre" autofocus>
                             <input class="form-control mb-3" type="text" name="usuario" id="usuario" placeholder="Usuario">
                             <input class="form-control mb-3" type="text" name="password" id="password" placeholder="Password">
                         </div>
                         <div class="card-footer">
-                            <button class="form-control btn btn-primary mb-3" type="submit">Guardar Usuario</button>
+                            <button id="txtGuardarUsuario" class="form-control btn btn-primary mb-3" type="submit">Guardar Usuario</button>
                             <button class="form-control btn btn-secondary" type="reset">Borrar Datos</button>
                         </div>
                     </div>
@@ -55,7 +56,7 @@
                 <table class="table hoover">
                     <thead>
                         <tr>
-                            <th>Id</th>
+                            <th>ID</th>
                             <th>Nombre</th>
                             <th>Usuario</th>
                             <th>Password</th>
